--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <div class="portfolio-info">
               <h4><a href="https://github.com/irvinitca/veterinariaapp" target="_blank">IR A REPO</a></h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/vet1.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/vet1.png" data-gall="portfolioGallery" class="venobox" title="App 1" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 <a href="detalleProyecto8.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Detalles</i></a>
               </div>
             </div>
@@ -334,7 +334,7 @@
             <div class="portfolio-info">
               <h4><a href="https://www.mideyweddingvibes.com/" target="_blank">IR A WEB</a></h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/mideystore.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/mideystore.png" data-gall="portfolioGallery" class="venobox" title="App 1" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 <a href="detalleProyecto7.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Detalles</i></a>
               </div>
             </div>
@@ -347,7 +347,7 @@
             <div class="portfolio-info">
               <h4><a href="https://github.com/Cerberus270/dama-project/" target="_blank">IR A REPO</a></h4>
               <div class="portfolio-links">
-                <a href="https://famous-plow-aea.notion.site/Proyecto-DAMA-588bc4d0b17c4170a4122ad2242a3d6f" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="https://famous-plow-aea.notion.site/Proyecto-DAMA-588bc4d0b17c4170a4122ad2242a3d6f" data-gall="portfolioGallery" class="venobox" title="App 1" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 
                 <a href="detalleProyecto0.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link"></i></a>
                 <a href="https://www.youtube.com/watch?v=vFKtfJ8iWBA" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Video</i></a>
@@ -362,7 +362,7 @@
             <div class="portfolio-info">
               <h4><a href="https://napoleonsnz.github.io/baristaluna.com/" target="_blank">IR A WEB</a></h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 <a href="detalleProyecto1.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Detalles</i></a>
               </div>
             </div>
@@ -375,7 +375,7 @@
             <div class="portfolio-info">
              <h4><a href="https://github.com/Toberal98/Sistema_MultiMotel" target="_blank">IR A REPO</a></h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/mimotelSV.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/mimotelSV.png" data-gall="portfolioGallery" class="venobox" title="Web 3" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 <a href="detalleProyecto6.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Detalles</i></a>
               </div>
             </div>
@@ -388,7 +388,7 @@
             <div class="portfolio-info">
              <h4><a href="https://github.com/NapoleonSNZ/JAVA_JSP_SERVLETS--CRUD" target="_blank">IR A CODIGO</a></h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 <a href="detalleProyecto4.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Detalles</i></a>
               </div>
             </div>
@@ -401,7 +401,7 @@
             <div class="portfolio-info">
              <h4><a href="https://napoleonsnz.github.io/download-movies/" target="_blank">IR A CODIGO</a></h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="App 2" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 <a href="detalleProyecto5.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Detalles</i></a>
               </div>
             </div>
@@ -414,7 +414,7 @@
             <div class="portfolio-info">
              <h4><a href="https://napoleonsnz.github.io/delitoproletario.com/" target="_blank">IR A WEB</a></h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 <a href="detalleProyecto3.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Detalles</i></a>
               </div>
             </div>
@@ -427,7 +427,7 @@
             <div class="portfolio-info">
              <h4><a href="http://napoleonsnz.github.io/blackroseartstudio.com/" target="_blank">IR A WEB</a></h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 <a href="detalleProyecto2.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Detalles</i></a>
               </div>
             </div>
